--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -326,7 +326,7 @@ TEX_forced_labor:0 "강제 노동"
 TEX_forced_labor_desc:0 "The loss of one hundred thousand people from the labor market has angered what used to be loyal Legionaries. Debates in the once quiet halls of Congress are erupting to demand Pelley find a solution to the lack of able-bodied workers in America. Pelley's solution? Forced labor for traitors at the service of the corporation that is the Commonwealth."
 TEX_jim_crows_america:0 "짐 크로의 미국"
 TEX_jim_crows_america_desc:0 "The way of life in the South that the northerner Pelley found, that of segregation and state laws that prevented blacks from exercising civil rights, struck Pelley as the true soul of America. Finally, with total control and the world to gain by acting, Pelley has begun to suggest northern states pass Jim Crow laws of their own."
-TEX_protecting_our_race:0 "선천설 부활"
+TEX_protecting_our_race:0 "우생학 부활"
 TEX_protecting_our_race_desc:0 "The foundations of America as Pelley and Armstrong see it are connected not only to the former nation of Britain, but to Anglo Saxons as a race. An executive act by Pelley has illegalized inter-racial marriage, requiring all marriages to occur in Christian Identity churches, and the Silver Legion itself has been deployed to re-segregate schools."
 TEX_segregation_forever:0 "영원한 분리"
 TEX_segregation_forever_desc:0 "Our inability to stop protesters from returning each day despite the beatings and the bullets proved to be an intriguing challenge. The Silver Legion has decided to employ an overwhelming alliance to out-shout the dissidents by calling up segregationist organizations in the South and inviting them to the Capital."
@@ -361,7 +361,7 @@ TEX_civil_works_adminstration:0 "토목사업국"
 TEX_civil_works_adminstration_desc:0 "As a nation, America lost a great deal of its labor supply to fighting and the poverty of the disorganized Federalists. The leader has pushed an executive order authorizing the creation of an agency to employ manual laborers fill out the spaces in employment for NRA projects."
 TEX_the_ccc:0 "시민보호협회"
 TEX_rural_electrification:0 "농촌전력화"
-TEX_rural_electrification_desc:0 "The electricity network throughout the United States has regressed to that of the 1910s. This is Un-American and we need to ensure that our constituents can be properly informed about our nation's glory."
+TEX_rural_electrification_desc:0 "미국 전역의 전력망은 내전을 거치며1910년대 수준으로 후퇴했습니다. 이것은 미국적이지 않으며 우리는 유권자들이 우리나라의 영광을 제대로 알 수 있도록 만들 필요가 있습니다."
 TEX_the_aaa:0 "농업조정법"
 TEX_the_aaa_desc:0 "Newspaper stories during the hysteria of 36 were filled with horror stories of farmers burning rotting crops due to being unable to sell excess while city ghettos starved. Our solution to this is the Agricultural Adjustment Act, to create a policy on crop conservation."
 TEX_farm_security_administration:0 "농업안정국"
@@ -373,8 +373,8 @@ TEX_harsh_reconstruction_desc:0 "Congress has sided with us in condemning these 
 TEX_reconciliation:0 "조정"
 TEX_reconciliation_desc:0 "의회는 마침내 행정부에 대항하여 승리했고, 선동적인 기업들에 대한 혐의를 제기하지 않기로 결정했습니다. 임원들은 회사를 다시 상장시키기 위해 사표를 내라는 압력을 받았지만, 결국 주주들은 잘못이 없는 것으로 간주됩니다."
 TEX_military_industrial_complex:0 "군수산업단지"
-TEX_military_industrial_complex_desc:0 "Constraints imposed by the poor state of the American treasury and the weak strength of the dollar has been made known to Congress, who has devised a new plan for recovery based on cooperation with private enterprise."
-TEX_coprotate_militarism:0 "Corporate Alliance"
+TEX_military_industrial_complex_desc:0 "재무부의 빈곤상태와 달러화의 약세라는 상황 속에서 민간 기업과의 협력을 바탕으로 고안된 새로운 경제회복계획이 의회에 보고되었습니다."
+TEX_coprotate_militarism:0 "법인연합"
 TEX_coprotate_militarism_desc:0 "The old bureaucratic system of time-based seniority pales in comparison to scientific management as proposed by Fredrick Taylor. We need the expertise of business professionals within Congress, in order to secure an alliance with the corporate infrastructure in America."
 TEX_business_subsides:0 "규제 완화"
 TEX_business_subsides_desc:0 "The dual-layered federal government system had allowed for at times very loose regulations on workspace practice, depending on the state. In order to leverage this inherent balance in our government, we must allow businesses both large and small to thrive."
@@ -383,7 +383,7 @@ TEX_building_grants_desc:0 "Smaller townships across America have no recourse if
 TEX_banking_act:0 "기업 군국주의"
 TEX_banking_act_desc:0 "Many businesses closed or were temporarily forced to leave America when union activity reached a pitched frenzy. There must be a show of strength to prove that America is now safe. We shall offer surplus military goods to companies looking to relocate back into 'dangerous' areas."
 TEX_military_factories:0 "군수 공장"
-TEX_military_factories_desc:0 "Munitions factories and armories are reporting a large loss of stock to theft as well as difficulty competing with foreign competition. We can fix the first without infringing on the Second Amendment with a tariff on imported arms."
+TEX_military_factories_desc:0 "군수공장과 조병창들은 도난에 대한 재고 손실뿐만 아니라 외국과의 경쟁에도 어려움을 겪고 있다고 보고됩니다. 우리는 수입 무기에 관세를 물리기 위해 수정헌법 제2조를 침해하지 않고 수정헌법 제1조를 수정할 수 있습니다."
 TEX_american_business_is_business:0 "미국의 사업은 바쁘다"
 TEX_american_business_is_business_desc:0 "As most of Congress is fiscally conservative, it was easy to pass laws reorganizing the newly named National Reserve to stop deflation. We must lower the money supply and remove illegal currency from circulation or else our buying power will never recover."
 TEX_create_esmwt:0 "연구 투자"
@@ -392,7 +392,7 @@ TEX_reconstruction_is_over:0 "재건이 끝나다"
 TEX_reconstruction_is_over_desc:0 "The course of reconstruction has revealed the true ideological basis for why Hoover was unable to fix the economy. The wiser constituents of these windbags have largely voted them out by now, as the GDP rises and the American standard of living rises and even exceeds pre-war levels."
 ### Army Path ###
 TEX_fight_for_america:0 "미국을 위해 싸우다"
-TEX_fight_for_america_desc:0 "Seizing the military installations of our allied Generals won't be enough to prevent MacArthur's War. A War Plan must be rapidly drawn up and executed in the event of both a short and protracted war."
+TEX_fight_for_america_desc:0 "우리 연합 맹장들을 위한 군사 시설을 갖추는 것은 맥아더와의 전면전을 감당하기에 충분하지 않을 것입니다. 전시 계획은 장-단기 전쟁이 일어날 경우 신속하게 계획되고 실행되어야 합니다."
 TEX_fire_arm_manufactures:0 "화기 제조사" 
 TEX_fire_arm_manufactures_desc:0 "The small arms industry is in dire need of reform. In spite of the national emergency, independent contractors continue to waste money researching civilian firearms. A restriction on big game hunting later, and some manufacturers are beginning to focus on military arms."
 TEX_military_industry:0 "군사 산업"
@@ -414,7 +414,7 @@ TEX_auto_industry_desc:0 "Since the invention of the Automobile, it has been tak
 TEX_shock_and_awe:0 "충격과 공포"
 TEX_shock_and_awe_desc:0 "Trench warfare on the American continent can be brutal. We know from experience that fighting in Appalachia is biased towards the defender. Despite our better nature, we must employ the heaviest artillery shells in order to force our enemies to retreat."
 TEX_military_research:0 "군사 연구"
-TEX_military_research_desc:0 "After so many decades of isolation and the devastation of the civil war, our nation lacks the capacity for military research and development of the other great powers of the world. Let us begin to remedy this unfortunate reality."
+TEX_military_research_desc:0 "수 년간의 고립과 내전으로 인한 대파괴 이후, 우리나라는 세계의 다른 강대국과 비교해서 군사 연구와 개발을 위한 능력이 부족합니다. 이 불행한 현실을 바로잡아봅시다."
 TEX_joint_chiefs_of_staff:0 "합동참모본부"
 TEX_joint_chiefs_of_staff_desc:0 "The disputes common in the Federal inter service politics persist in our own government. In order to avoid this interdisciplinary contention from spilling over, we must ensure that all our Chiefs of Staff are given equal attention."
 TEX_womens_land_army:0 "여군"
@@ -441,9 +441,9 @@ TEX_air_force_desc:0 "Since that first fateful flight in Kitty Hawk field, the S
 TEX_aviation_industry:0 "항공 산업"
 TEX_aviation_industry_desc:0 "항공 산업은 이제 육해군의 영향력이 닿지 않는 곳에서 자유롭게 계약을 체결할 수 있습니다. 항공 산업이 적합하다고 여겨질 때 자유롭게 성장할 수 있습니다."
 TEX_pilot_training:0 "파일럿 훈련"
-TEX_pilot_training_desc:0 "찰스 린드버그는 민간 근무에서 배운 장거리 비행법과 회피기동을 조종사들에게 훈련시키겠다고 제안했습니다. 우리의 조종사들은 위대한 미국 비행 서커스단의 일부가 될 것입니다."
+TEX_pilot_training_desc:0 "찰스 린드버그는 민간 근무에서 배운 장거리 비행법과 회피기동을 조종사들에게 훈련시키겠다고 제안했습니다. 우리의 조종사들은 위대한 미국 에이스들의 일부가 될 것입니다."
 TEX_air_ports:0 "공항 확충"
-TEX_air_ports_desc:0 "We must ensure our strongholds can properly transport goods over hostile land. Airports and runways will enable us to be more connected. "
+TEX_air_ports_desc:0 "우리는 적절한 보급품이 적지를 넘어 우리의 요새로 수송되도록 보장해야 합니다. 공항과 활주로는 그러한 연결을 가능케 할 것입니다."
 TEX_army_air_support:0 "육군 항공 지원"
 TEX_army_air_support_desc:0 "The Army's request for more ground support while traversing the trenches our enemies have erected. As an equal partner the Air Force approves this request."
 TEX_bombers:0 "폭격기 개발"
@@ -552,7 +552,7 @@ TEX_crusade_against_syndicalism:0 "금색 전쟁계획"
 TEX_crusade_against_syndicalism_desc:0 "In the arrogance of the Federal government, War Plan Gold was not enacted when Syndicalists burst into France. We have revised the plan and are ready to strike at the heart of revolutionary destruction and save Europe."
 TEX_join_science_sharing:0 "함께 단결하다"
 TEX_join_science_sharing_desc:0 "Stronger ideological ties have formed, with propaganda depicting America in the great national struggle they face. Our propogandist has reciprocated that sentiment, with European allies taking our side against foreign enemies in our publications. "
-TEX_american_century2:0 "The American Century"
+TEX_american_century2:0 "미국의 세기"
 TEX_american_century2_desc:0 "The final struggle against syndicalism has ended. What they in Europe have wrought and tried to export is now eliminated. With the greatest threat to American livelihood over, the dark mask of terror is finally lifted from our people."
 ### internal conflict stuff ###
 
@@ -610,10 +610,10 @@ unionstate.11.t:0 "찰스 코글린을 교체해야할까요?"
 unionstate.11.d:0 "The years of service to America has worn Father Charles Coughlin down. In between his radio shows, Social Justice publications, he rarely has time to promote Share Our Wealth Societies. This coupled with his increasing emotional instability has led to this day. President Long, while silent on this issue, sympathizes with the Jewish citizens for whom Coughlin has made their lives very difficult. We must retire Coughlin, but who should replace him? The calmer preacher Billy Graham? Huey's old running mate William Lemke? Or up-and-coming Longist Rush Holt Sr.?"
 unionstate.11.a:0 "Billy Graham"
 unionstate.11.b:0 "William Lemke"
-unionstate.11.c:0 "Rush Holt Sr. "
+unionstate.11.c:0 "러쉬 홀트 경"
 
 unionstate.12.t:0 "롱 왕조"
-unionstate.12.d:0 "롱의 일가가 대중의 이목을 끌기까지는 수년이 걸렸지만, 휴이 롱의 형제들과 아들들은 그것 때문에 더 세속적입니다. 누구나 암살자가 될 수 있는 이 불확실한 시기에, 휴이 일가는 내각의 요직을 차지해야 할까요? 가장 결단력 있는 롱의 지지자 외에 가족을 정부의 요직에 받아들이는 것은 자신감의 연장일 것입니다."
+unionstate.12.d:0 "롱의 일가가 대중의 이목을 끌기까지는 수년이 걸렸지만, 휴이 롱의 형제들과 아들들은 그것 때문에 더 세속적입니다. 누구나 총에 맞을 수 있는 이 불확실한 시기에, 휴이 일가는 내각의 요직을 차지해야 할까요? 가장 결단력 있는 롱의 지지자 외에 가족을 정부의 요직에 받아들이는 것은 자신감의 연장일 것입니다."
 unionstate.12.a:0 "너무 나갔다"
 unionstate.12.b:0 "롱과 함께라면 잘못되지(wrong) 않는다"
 
@@ -633,7 +633,7 @@ unionstate.15.b:0 "맥매스와 함께한다"
 
 unionstate.16.t:0 "맥태규가 극장에서 개봉되다"
 unionstate.16.d:0 "A tale of greed and betrayal that once littered America is now encapsulated in the new film McTeague. A social commentary by director Erich von Stroheim about the corrupting power of wealth is seen by many as a parable to the state of America before the Civil War. This massive four-hour epic film had it's ending altered from the original book, where a kind stranger intervenes in the death struggle of McTeague and whisks him away from Death Valley back to civilization."
-unionstate.16.a:0 "I had a good nap watching"
+unionstate.16.a:0 "낮잠 잘 잤다"
 
 unionstate.17.t:0 "사회주의 비밀결사에 대한 고발"
 unionstate.17.d:0 "'우리의 부를 공유하자'와 '모든 사람이 왕이다'에 대한 대중의 이해는 주로 노래와 슬로건에 입각합니다. 비록 오늘날 많은 미국인들이 노래를 따라 부르지만, 우리의 정책이 사회주의 비밀결사라고 계속해서 말하는 예전 민주당원들이 있습니다. 그들의 주장은 서반구 내에서의 우리의 평판을 점점 더 손상시키고 있습니다. 어떻게 대응해야 할까요?"
