남아공 미출력문제 수정

--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -5794,36 +5794,36 @@ RWA_national_populist:0 "후투 제국"
 RWA_national_populist_ADJ:0 "후투"
 RWA_national_populist_DEF:0 "후투 제국"
 
-#SAF_totalist:0 "케이프 코뮌"
-#SAF_totalist_ADJ:0 "남아프리카"
-#SAF_totalist_DEF:0 "케이프 코뮌"
-#SAF_syndicalist:0 "케이프 코뮌"
-#SAF_syndicalist_ADJ:0 "남아프리카"
-#SAF_syndicalist_DEF:0 "케이프 코뮌"
-#SAF_radical_socialist:0 "케이프 코뮌"
-#SAF_radical_socialist_ADJ:0 "남아프리카"
-#SAF_radical_socialist_DEF:0 "케이프 코뮌"
-#SAF_social_democrat:0 "남아프리카 연방"
-#SAF_social_democrat_ADJ:0 "남아프리카"
-#SAF_social_democrat_DEF:0 "남아프리카 연방"
-#SAF_social_liberal:0 "남아프리카 연방"
-#SAF_social_liberal_ADJ:0 "남아프리카"
-#SAF_social_liberal_DEF:0 "남아프리카 연방"
-#SAF_market_liberal:0 "남아프리카 연방"
-#SAF_market_liberal_ADJ:0 "남아프리카"
-#SAF_market_liberal_DEF:0 "남아프리카 연방"
-#SAF_social_conservative:0 "남아프리카 연방"
-#SAF_social_conservative_ADJ:0 "남아프리카"
-#SAF_social_conservative_DEF:0 "남아프리카 연방"
-#SAF_authoritarian_democrat:0 "남아프리카 연방"
-#SAF_authoritarian_democrat_ADJ:0 "남아프리카"
-#SAF_authoritarian_democrat_DEF:0 "남아프리카 연방"
-#SAF_paternal_autocrat:0 "남아프리카 연방"
-#SAF_paternal_autocrat_ADJ:0 "남아프리카"
-#SAF_paternal_autocrat_DEF:0 "남아프리카 연방"
-#SAF_national_populist:0 "남아프리카 연방"
-#SAF_national_populist_ADJ:0 "남아프리카"
-#SAF_national_populist_DEF:0 "남아프리카 연방
+SAF_totalist:0 "케이프 코뮌"
+SAF_totalist_ADJ:0 "남아프리카"
+SAF_totalist_DEF:0 "케이프 코뮌"
+SAF_syndicalist:0 "케이프 코뮌"
+SAF_syndicalist_ADJ:0 "남아프리카"
+SAF_syndicalist_DEF:0 "케이프 코뮌"
+SAF_radical_socialist:0 "케이프 코뮌"
+SAF_radical_socialist_ADJ:0 "남아프리카"
+SAF_radical_socialist_DEF:0 "케이프 코뮌"
+SAF_social_democrat:0 "남아프리카 연방"
+SAF_social_democrat_ADJ:0 "남아프리카"
+SAF_social_democrat_DEF:0 "남아프리카 연방"
+SAF_social_liberal:0 "남아프리카 연방"
+SAF_social_liberal_ADJ:0 "남아프리카"
+SAF_social_liberal_DEF:0 "남아프리카 연방"
+SAF_market_liberal:0 "남아프리카 연방"
+SAF_market_liberal_ADJ:0 "남아프리카"
+SAF_market_liberal_DEF:0 "남아프리카 연방"
+SAF_social_conservative:0 "남아프리카 연방"
+SAF_social_conservative_ADJ:0 "남아프리카"
+SAF_social_conservative_DEF:0 "남아프리카 연방"
+SAF_authoritarian_democrat:0 "남아프리카 연방"
+SAF_authoritarian_democrat_ADJ:0 "남아프리카"
+SAF_authoritarian_democrat_DEF:0 "남아프리카 연방"
+SAF_paternal_autocrat:0 "남아프리카 연방"
+SAF_paternal_autocrat_ADJ:0 "남아프리카"
+SAF_paternal_autocrat_DEF:0 "남아프리카 연방"
+SAF_national_populist:0 "남아프리카 연방"
+SAF_national_populist_ADJ:0 "남아프리카"
+SAF_national_populist_DEF:0 "남아프리카 연방
 
 SAR_totalist:0 "사라왁 사회주의 공화국"
 SAR_totalist_ADJ:0 "사라왁"
