--- a/Kaiserreich Korean Translation/localisation/KR_Hawaii_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Hawaii_l_english.yml
@@ -5,8 +5,8 @@ HAW_totalist_party:0 "하와이 혁명당"
 HAW_totalist_party_long:0 "하와이 혁명당"
 HAW_syndicalist_party:0 "하와이 노동자 연합"
 HAW_syndicalist_party_long:0 "하와이 노동자 연합"
-HAW_radical_socialist_party:0 "하와이 사회주의당"
-HAW_radical_socialist_party_long:0 "하와이 사회주의당"
+HAW_radical_socialist_party:0 "하와이 사회당"
+HAW_radical_socialist_party_long:0 "하와이 사회당"
 HAW_social_democrat_party:0 "진보당"
 HAW_social_democrat_party_long:0 "진보당"
 HAW_social_liberal_party:0 "국가자유당"
@@ -143,71 +143,71 @@ HAW_destroyers_mexico:0 "Buy a destroyer from Mexico"
 HAW_destroyers_chile:0 "Buy a destroyer from Chile"
 
 ### Cosmetic Tags ###
-HAW_kingdom_social_democrat:0 "Kingdom of Hawai'i"
-HAW_kingdom_social_democrat_ADJ:0 "Hawaiian"
-HAW_kingdom_social_democrat_DEF:0 "Kingdom of Hawai'i"
-HAW_kingdom_social_liberal:0 "Kingdom of Hawai'i"
-HAW_kingdom_social_liberal_ADJ:0 "Hawaiian"
-HAW_kingdom_social_liberal_DEF:0 "Kingdom of Hawai'i"
-HAW_kingdom_market_liberal:0 "Kingdom of Hawai'i"
-HAW_kingdom_market_liberal_ADJ:0 "Hawaiian"
-HAW_kingdom_market_liberal_DEF:0 "Kingdom of Hawai'i"
-HAW_kingdom_social_conservative:0 "Kingdom of Hawai'i"
-HAW_kingdom_social_conservative_ADJ:0 "Hawaiian"
-HAW_kingdom_social_conservative_DEF:0 "Kingdom of Hawai'i"
-HAW_kingdom_authoritarian_democrat:0 "Kingdom of Hawai'i"
-HAW_kingdom_authoritarian_democrat_ADJ:0 "Hawaiian"
-HAW_kingdom_authoritarian_democrat_DEF:0 "Kingdom of Hawai'i"
-HAW_kingdom_paternal_autocrat:0 "Kingdom of Hawai'i"
-HAW_kingdom_paternal_autocrat_ADJ:0 "Hawaiian"
-HAW_kingdom_paternal_autocrat_DEF:0 "Kingdom of Hawai'i"
-HAW_kingdom_national_populist:0 "Kingdom of Hawai'i"
-HAW_kingdom_national_populist_ADJ:0 "Hawaiian"
-HAW_kingdom_national_populist_DEF:0 "Kingdom of Hawai'i"
+HAW_kingdom_social_democrat:0 "하와이 왕국"
+HAW_kingdom_social_democrat_ADJ:0 "하와이"
+HAW_kingdom_social_democrat_DEF:0 "하와이 왕국"
+HAW_kingdom_social_liberal:0 "하와이 왕국"
+HAW_kingdom_social_liberal_ADJ:0 "하와이"
+HAW_kingdom_social_liberal_DEF:0 "하와이 왕국"
+HAW_kingdom_market_liberal:0 "하와이 왕국"
+HAW_kingdom_market_liberal_ADJ:0 "하와이"
+HAW_kingdom_market_liberal_DEF:0 "하와이 왕국"
+HAW_kingdom_social_conservative:0 "하와이 왕국"
+HAW_kingdom_social_conservative_ADJ:0 "하와이"
+HAW_kingdom_social_conservative_DEF:0 "하와이 왕국"
+HAW_kingdom_authoritarian_democrat:0 "하와이 왕국"
+HAW_kingdom_authoritarian_democrat_ADJ:0 "하와이"
+HAW_kingdom_authoritarian_democrat_DEF:0 "하와이 왕국"
+HAW_kingdom_paternal_autocrat:0 "하와이 왕국"
+HAW_kingdom_paternal_autocrat_ADJ:0 "하와이"
+HAW_kingdom_paternal_autocrat_DEF:0 "하와이 왕국"
+HAW_kingdom_national_populist:0 "하와이 왕국"
+HAW_kingdom_national_populist_ADJ:0 "하와이"
+HAW_kingdom_national_populist_DEF:0 "하와이 왕국"
 
-HAW_commune_social_democrat:0 "Commune of Hawai'i"
-HAW_commune_social_democrat_ADJ:0 "Hawaiian"
-HAW_commune_social_democrat_DEF:0 "Commune of Hawai'i"
-HAW_commune_social_liberal:0 "Commune of Hawai'i"
-HAW_commune_social_liberal_ADJ:0 "Hawaiian"
-HAW_commune_social_liberal_DEF:0 "Commune of Hawai'i"
-HAW_commune_market_liberal:0 "Commune of Hawai'i"
-HAW_commune_market_liberal_ADJ:0 "Hawaiian"
-HAW_commune_market_liberal_DEF:0 "Commune of Hawai'i"
-HAW_commune_social_conservative:0 "Commune of Hawai'i"
-HAW_commune_social_conservative_ADJ:0 "Hawaiian"
-HAW_commune_social_conservative_DEF:0 "Commune of Hawai'i"
-HAW_commune_authoritarian_democrat:0 "Commune of Hawai'i"
-HAW_commune_authoritarian_democrat_ADJ:0 "Hawaiian"
-HAW_commune_authoritarian_democrat_DEF:0 "Commune of Hawai'i"
-HAW_commune_paternal_autocrat:0 "Commune of Hawai'i"
-HAW_commune_paternal_autocrat_ADJ:0 "Hawaiian"
-HAW_commune_paternal_autocrat_DEF:0 "Commune of Hawai'i"
-HAW_commune_national_populist:0 "Commune of Hawai'i"
-HAW_commune_national_populist_ADJ:0 "Hawaiian"
-HAW_commune_national_populist_DEF:0 "Commune of Hawai'i"
+HAW_commune_social_democrat:0 "하와이 코뮌"
+HAW_commune_social_democrat_ADJ:0 "하와이"
+HAW_commune_social_democrat_DEF:0 "하와이 코뮌"
+HAW_commune_social_liberal:0 "하와이 코뮌"
+HAW_commune_social_liberal_ADJ:0 "하와이"
+HAW_commune_social_liberal_DEF:0 "하와이 코뮌"
+HAW_commune_market_liberal:0 "하와이 코뮌"
+HAW_commune_market_liberal_ADJ:0 "하와이"
+HAW_commune_market_liberal_DEF:0 "하와이 코뮌"
+HAW_commune_social_conservative:0 "하와이 코뮌"
+HAW_commune_social_conservative_ADJ:0 "하와이"
+HAW_commune_social_conservative_DEF:0 "하와이 코뮌"
+HAW_commune_authoritarian_democrat:0 "하와이 코뮌"
+HAW_commune_authoritarian_democrat_ADJ:0 "하와이"
+HAW_commune_authoritarian_democrat_DEF:0 "하와이 코뮌"
+HAW_commune_paternal_autocrat:0 "하와이 코뮌"
+HAW_commune_paternal_autocrat_ADJ:0 "하와이"
+HAW_commune_paternal_autocrat_DEF:0 "하와이 코뮌"
+HAW_commune_national_populist:0 "하와이 코뮌"
+HAW_commune_national_populist_ADJ:0 "하와이"
+HAW_commune_national_populist_DEF:0 "하와이 코뮌"
 
-HAW_republic_social_democrat:0 "Republic of Hawai'i"
-HAW_republic_social_democrat_ADJ:0 "Hawaiian"
-HAW_republic_social_democrat_DEF:0 "Republic of Hawai'i"
-HAW_republic_social_liberal:0 "Republic of Hawai'i"
-HAW_republic_social_liberal_ADJ:0 "Hawaiian"
-HAW_republic_social_liberal_DEF:0 "Republic of Hawai'i"
-HAW_republic_market_liberal:0 "Republic of Hawai'i"
-HAW_republic_market_liberal_ADJ:0 "Hawaiian"
-HAW_republic_market_liberal_DEF:0 "Republic of Hawai'i"
-HAW_republic_social_conservative:0 "Republic of Hawai'i"
-HAW_republic_social_conservative_ADJ:0 "Hawaiian"
-HAW_republic_social_conservative_DEF:0 "Republic of Hawai'i"
-HAW_republic_authoritarian_democrat:0 "Republic of Hawai'i"
-HAW_republic_authoritarian_democrat_ADJ:0 "Hawaiian"
-HAW_republic_authoritarian_democrat_DEF:0 "Republic of Hawai'i"
-HAW_republic_paternal_autocrat:0 "Republic of Hawai'i"
-HAW_republic_paternal_autocrat_ADJ:0 "Hawaiian"
-HAW_republic_paternal_autocrat_DEF:0 "Republic of Hawai'i"
-HAW_republic_national_populist:0 "Republic of Hawai'i"
-HAW_republic_national_populist_ADJ:0 "Hawaiian"
-HAW_republic_national_populist_DEF:0 "Republic of Hawai'i"
+HAW_republic_social_democrat:0 "하와이 공화국"
+HAW_republic_social_democrat_ADJ:0 "하와이"
+HAW_republic_social_democrat_DEF:0 "하와이 공화국"
+HAW_republic_social_liberal:0 "하와이 공화국"
+HAW_republic_social_liberal_ADJ:0 "하와이"
+HAW_republic_social_liberal_DEF:0 "하와이 공화국"
+HAW_republic_market_liberal:0 "하와이 공화국"
+HAW_republic_market_liberal_ADJ:0 "하와이"
+HAW_republic_market_liberal_DEF:0 "하와이 공화국"
+HAW_republic_social_conservative:0 "하와이 공화국"
+HAW_republic_social_conservative_ADJ:0 "하와이"
+HAW_republic_social_conservative_DEF:0 "하와이 공화국"
+HAW_republic_authoritarian_democrat:0 "하와이 공화국"
+HAW_republic_authoritarian_democrat_ADJ:0 "하와이"
+HAW_republic_authoritarian_democrat_DEF:0 "하와이 공화국"
+HAW_republic_paternal_autocrat:0 "하와이 공화국"
+HAW_republic_paternal_autocrat_ADJ:0 "하와이"
+HAW_republic_paternal_autocrat_DEF:0 "하와이 공화국"
+HAW_republic_national_populist:0 "하와이 공화국"
+HAW_republic_national_populist_ADJ:0 "하와이"
+HAW_republic_national_populist_DEF:0 "하와이 공화국"
 
 
 
