--- a/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
@@ -1,12 +1,12 @@
 l_english:
 
 ### Parties ###
-NEE_totalist_party:0 "미국 사회주의당"
-NEE_totalist_party_long:0 "미국 사회주의당"
-NEE_syndicalist_party:0 "미국 사회주의당"
-NEE_syndicalist_party_long:0 "미국 사회주의당"
-NEE_radical_socialist_party:0 "미국 사회주의당"
-NEE_radical_socialist_party_long:0 "미국 사회주의당"
+NEE_totalist_party:0 "미국 사회당"
+NEE_totalist_party_long:0 "미국 사회당"
+NEE_syndicalist_party:0 "미국 사회당"
+NEE_syndicalist_party_long:0 "미국 사회당"
+NEE_radical_socialist_party:0 "미국 사회당"
+NEE_radical_socialist_party_long:0 "미국 사회당"
 NEE_social_democrat_party:0 "진보당"
 NEE_social_democrat_party_long:0 "진보당"
 NEE_social_liberal_party:0 "자유당"
@@ -175,27 +175,27 @@ NEE_GUI_Uprising_locked_TT:0 "§YLaunch an Uprising!\n§gThe day of reckoning ha
 NEE_GUI_Uprising_unlocked_TT:0 "§YLaunch an Uprising!\n§gThe day of reckoning has come and the cells we so carefully fostered are now ready to perform their strikes on the central government. For Liberty!§!"
 
 ### Cosmetic Tags ###
-NEE_america_social_democrat:0 "United States of America"
-NEE_america_social_democrat_ADJ:0 "American"
-NEE_america_social_democrat_DEF:0 "United States of America"
-NEE_america_social_liberal:0 "United States of America"
-NEE_america_social_liberal_ADJ:0 "American"
-NEE_america_social_liberal_DEF:0 "United States of America"
-NEE_america_market_liberal:0 "United States of America"
-NEE_america_market_liberal_ADJ:0 "American"
-NEE_america_market_liberal_DEF:0 "United States of America"
-NEE_america_social_conservative:0 "United States of America"
-NEE_america_social_conservative_ADJ:0 "American"
-NEE_america_social_conservative_DEF:0 "United States of America"
-NEE_america_authoritarian_democrat:0 "United States of America"
-NEE_america_authoritarian_democrat_ADJ:0 "American"
-NEE_america_authoritarian_democrat_DEF:0 "United States of America"
-NEE_america_paternal_autocrat:0 "United States of America"
-NEE_america_paternal_autocrat_ADJ:0 "American"
-NEE_america_paternal_autocrat_DEF:0 "United States of America"
-NEE_america_national_populist:0 "United States of America"
-NEE_america_national_populist_ADJ:0 "American"
-NEE_america_national_populist_DEF:0 "United States of America"
+NEE_america_social_democrat:0 "미합중국"
+NEE_america_social_democrat_ADJ:0 "미국"
+NEE_america_social_democrat_DEF:0 "미합중국"
+NEE_america_social_liberal:0 "미합중국"
+NEE_america_social_liberal_ADJ:0 "미국"
+NEE_america_social_liberal_DEF:0 "미합중국"
+NEE_america_market_liberal:0 "미합중국"
+NEE_america_market_liberal_ADJ:0 "미국"
+NEE_america_market_liberal_DEF:0 "미합중국"
+NEE_america_social_conservative:0 "미합중국"
+NEE_america_social_conservative_ADJ:0 "미국"
+NEE_america_social_conservative_DEF:0 "미합중국"
+NEE_america_authoritarian_democrat:0 "미합중국"
+NEE_america_authoritarian_democrat_ADJ:0 "미국"
+NEE_america_authoritarian_democrat_DEF:0 "미합중국"
+NEE_america_paternal_autocrat:0 "미합중국"
+NEE_america_paternal_autocrat_ADJ:0 "미국"
+NEE_america_paternal_autocrat_DEF:0 "미합중국"
+NEE_america_national_populist:0 "미합중국"
+NEE_america_national_populist_ADJ:0 "미국"
+NEE_america_national_populist_DEF:0 "미합중국"
 
 ### FOCUS TREE ###
 NEE_Legitimate_America:0 "Americas Darkest Hour"
