--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -416,17 +416,17 @@ RUS_tsar_party_long:0 "러시아 군주 연합"
 RUS_KRSKY:0 "케렌스키 대통령"
 RUS_KRSKY_desc:0 "알렉산드르 케렌스키 대통령은 두 번의 전란 속에서 우리 나라를 20년 넘게 통치해 왔습니다. 그가 그의 목숨에 대한 무수히 많은 도전들에게서 살아남았다는 것이 놀라울 뿐입니다."
 
-RUS_CON_MON:0 "입헌 군주정을 설립"
-RUS_CON_MON_desc:0 "차르의 전제 군주정은 오랜 평화를 가져오기는커녕, 오히려 유혈 폭동과 쿠데타만을 불러오는 것으로 증명되었습니다. 러시아는 강력한 헌법에 의해 통제되는 새로운 로마노프 왕조를 세울 준비가 되었습니다."
-con_mon_tooltip:0 "§R정통성있는 차르 키릴 로마노프를 새로운 입헌 군주국의 수장으로 초대할 것입니다.§! \n"
-unlock_conmon:0 "브랑겔 남작이 정권을 장악했습니다 §Yor§! 드미트리 대통령이 실권자입니다 §Yor§! 밀류코프가 정부를 이끌고 있습니다 §Yor§! 체레텔리가 정부를 이끌고 있습니다"
+RUS_CON_MON:0 "입헌군주정을 설립"
+RUS_CON_MON_desc:0 "차르의 전제군주정은 오랜 평화를 가져오기는커녕, 오히려 유혈 폭동과 쿠데타만을 불러오는 것으로 증명되었습니다. 러시아는 강력한 헌법에 의해 통제되는 새로운 로마노프 왕조를 세울 준비가 되었습니다."
+con_mon_tooltip:0 "§R정통성있는 차르 키릴 로마노프를 새로운 입헌군주국의 수장으로 초대할 것입니다.§! \n"
+unlock_conmon:0 "브란겔 남작이 정권을 장악했습니다 §Yor§! 드미트리 대통령이 실권자입니다 §Yor§! 밀류코프가 정부를 이끌고 있습니다 §Yor§! 체레텔리가 정부를 이끌고 있습니다"
 RUS_TSAR_KYR:0 "정통성 있는 차르를 초대"
 RUS_TSAR_KYR_desc:0 "지난 30년간의 혼란은 러시아 국민들에게 혼란스러운 선거와 공공 불안보다는 강력한 철권의 통치자가 군림하는 것이 더 나을 것이라고 느끼기에 충분했습니다. 전직 해군 장교 키릴 블라디미로비치보다 여기에 더 적절한 인물이 있을까요?"
-unlock_tsarkyr:0 "브랑겔 남작이 정권을 장악했습니다 §Yor§! 드미트리 로마노프 대통령이 실권자입니다!"
-tsar_kyr_tooltip:0 "§R정통성있는 차르 키릴 로마노프를 새로운 전제 군주국의 수장으로 초대할 것입니다.§! \n"
+unlock_tsarkyr:0 "브란겔 남작이 정권을 장악했습니다 §Yor§! 드미트리 로마노프 대통령이 실권자입니다!"
+tsar_kyr_tooltip:0 "§R정통성있는 차르 키릴 로마노프를 새로운 전제군주국의 수장으로 초대할 것입니다.§! \n"
 RUS_TSAR_DMI:0 "드미트리에게 제위를 수여"
 RUS_TSAR_DMI_desc:0 "로마노프 왕조는 러시아를 300년 넘게 통치해왔습니다. 뒤따르는 혼란을 끝내고 싶다면 빨리 끝내는 편이 좋습니다. 마지막 황제의 사촌인 드미트리 대공이 이제 제위에 올라 러시아의 위대함과 영광을 완전히 되찾아야 합니다."
-tsar_dmi_tooltip:0 "§R대공 드미트리 로마노프를 새로운 전제 군주국의 수장으로서 제위에 앉힐 것입니다.§! \n"
+tsar_dmi_tooltip:0 "§R대공 드미트리 로마노프를 새로운 전제군주국의 수장으로서 제위에 앉힐 것입니다.§! \n"
 unlock_tsardmi:0 "드미트리 대통령이 실권자입니다 §Yor§! 군부가 정권을 장악했습니다!"
 
 RUS_ARI_REP:0 "귀족 공화정 설립"
@@ -448,7 +448,7 @@ vozhd_focus_tooltip:0 "§R사빈코프는 공식적으로 공화국의 새로운
 RUS_MIL_DICT:0 "군사 독재"
 RUS_MIL_DICT_desc:0 "육군은 나약한 자유주의 공화국에 의해 약화된 후에도 러시아에서 항상 안정된 군대였습니다. 그들은 러시아를 보호하기 위해 강력함을 유지해왔습니다. 이제 그들이 러시아를 통제하는 이유는 오로지 정의 뿐입니다. 오직 육군만이 모든 국가적 분쟁에서 자신이 먼저 뛰어들 수 있습니다."
 MIL_DICT_focus_tooltip:0 "§R러시아는 계속해서 군부의 통제를 받습니다!§!\n"
-unlock_milgov:0 "브랑겔이 정부를 이끌고 있습니다 §Yor§! 사빈코프가 정부를 이끌고 있으며 코르닐로프는 자신의 직책을 수행할 수 없습니다"
+unlock_milgov:0 "브란겔이 정부를 이끌고 있습니다 §Yor§! 사빈코프가 정부를 이끌고 있으며 코르닐로프는 자신의 직책을 수행할 수 없습니다"
 
 RUS_SOVIET:0 "프롤레타리아 독재정을 복원"
 RUS_SOVIET_desc:0 "이제 낡은 엘리트들이 아닌 노동자들에게 충실한 사람들이 이전 케렌스키 정부의 실패로 인한 피해를 복구하러 나설 때입니다."
@@ -607,7 +607,7 @@ RUS_infantry_tech2_desc:0 "We have come some part of the way, but there's still 
 RUS_infantry_tech3:0 "현대화 종결"
 RUS_infantry_tech3_desc:0 "Just like Denikin envisioned, we now have a large, well-equipped army applying modern tactics. The Russian army will be unstoppable, Russia unconquerable. There will not be another Brest-Litovsk!"
 
-RUS_reform_wrangel:0 "육군 개혁: 브랑겔의 계획"
+RUS_reform_wrangel:0 "육군 개혁: 브란겔의 계획"
 RUS_reform_wrangel_desc:0 "Wrangel, while not as widely respected as Denikin, is still popular with some parts of the military. He believes in discipline and is respected far and wide for his administrative abilities. With extensive planning and a general motorisation, he believes he can make the Russian army the greatest in the world!"
 RUS_military_infrastructure:0 "군사 기반시설 개발"
 RUS_military_infrastructure_desc:0 "Wrangels plans require large amounts of preparation, including setting up important supply points at key locations. Railroads and highways must stretch from end to end in Russia!"
