--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -27,7 +27,7 @@ l_english:
  STATE_25:0 "리무쟁"
  STATE_26:0 "오베르뉴"
  STATE_27:0 "부르고뉴"
- STATE_28:0 "엘자스로트링겐"
+ STATE_28:0 "엘자스-로트링겐"
  STATE_29:0 "프란스플란데런"
  STATE_30:0 "루아르"
  STATE_31:0 "가론강"
