--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -708,7 +708,7 @@ GER_linie2_full:0 "뫼즈 강 너머로"
 GER_linie2_full_desc:0 "브뤼셀에 있는 우리의 괴뢰 정권은 생디칼리즘에 대항해 도움을 울부짖고 있습니다. 뫼즈 강에서 북해 연안까지 루덴도르프 선을 연장하려면 많은 비용과 귀중한 시간이 들겠지만, 잘하면 독일 밖에서 적을 막아낼 수도 있을 것입니다."
 
 GER_linie2_small:0 "바스토뉴만을 현대화"
-GER_linie2_small_desc:0 "우리의 자원이 고갈되는 것은 시간 문제입니다. 비록 플랑드르-왈로니아의 방비가 약간 허술할지라도, 우리는 어차피 조만간 잃어버리게 될 것을 방어하는데 시간을 낭비할 여유가 없습니다."
+GER_linie2_small_desc:0 "우리의 자원이 고갈되는 것은 시간 문제입니다. 비록 플란데런-우알로니의 방비가 약간 허술할지라도, 우리는 어차피 조만간 잃어버리게 될 것을 방어하는데 시간을 낭비할 여유가 없습니다."
 
 GER_linie3:0 "라인란트 요새화"
 GER_linie3_desc:0 "라인란트는 전세계에서 가장 산업화가 잘 된 지역으로, 전쟁 중일 때나 평화로울 때나 우리 경제에 매우 중요합니다. 그리고 그 지역은 지난 몇 주 동안 많은 사람들이 불안한듯이 쳐다봤던 국경에서 불과 몇 마일 떨어져 있을 뿐입니다. 만일의 사태에 대비해, 우리는 루덴도르프 선을 북쪽으로 연장해야 합니다."
