--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -127,7 +127,7 @@ amcivwar.9.a:0 "이건 아니야…"
 ### Set Up Events - Olson ###
 
 amcivwar.11.t:0 "휴이 롱이 미주 연합을 선포하다"
-amcivwar.11.d.nothing_is_done:0 "세인트루이스에서의 폭력사태는 휴이 롱이 라디오를 통해 올슨 대통령은 은행가들과 생디칼주의자들에게 미국민을 팔려고 시도한 역적이자 매국노이며, 올슨과 리드에 대항해 미국인의 삶을 지켜내야 한다고 선언하게 만들었습니다."
+amcivwar.11.d.nothing_is_done:0 "세인트루이스에서의 폭력사태는 휴이 롱이 라디오를 통해 올슨 대통령은 은행가들과 생디칼리스트들에게 미국민을 팔려고 시도한 역적이자 매국노이며, 올슨과 리드에 대항해 미국인의 삶을 지켜내야 한다고 선언하게 만들었습니다."
 amcivwar.11.d.revolt_against_compromise:0 "협상 시도의 실패와 함께 미국은 박살이 났습니다. 휴이 롱은 라디오를 통해 부패한 올슨 대통령과 꼴통 리드 둘 다 미국을 위해 멈춰져야 한다고 선언하고 모든 미국인들이 그들에 대항해 봉기할 것을 요청했습니다."
 amcivwar.11.d.assassination_long:0 "휴이 롱에 대한 암살 시도는 좌절되었고, 운이 나쁘게도 암살에 대한 연방 정부의 개입이 공개되었습니다. 이 사건은 제일당의 행동에 정당성을 심어주었습니다. 롱은 올슨 대통령과 잭 리드를 역적이자 폭군이라고 비난했으며, 그들의 폭정으로부터 롱과 그의 지지자들의 삶을 보호하기 위해 뭉쳐야 한다고 선언했습니다."
 amcivwar.11.a:0 "공화국을 지켜내자"
@@ -146,7 +146,7 @@ amcivwar.13.a:0 "이건 아니야…"
 
 ### Set Up Events - Garner ###
 amcivwar.14.t:0 "롱이 미주 연합을 선포하다"
-amcivwar.14.d:0 "휴이 롱은 가너 대통령은 폭군이며 이에 반대해 봉기해야 한다고 선언했습니다. 라디오 연설에서 롱은 가너를 사회당의 생디칼주의자들과 결탁했으며 혼란을 막기 위한 어떤 조치도 취하지 않았다고 비난했습니다. 롱은 워싱턴의 질서를 회복하고 부패한 정부를 파괴하겠다고 맹세했습니다."
+amcivwar.14.d:0 "휴이 롱은 가너 대통령은 폭군이며 이에 반대해 봉기해야 한다고 선언했습니다. 라디오 연설에서 롱은 가너를 사회당의 생디칼리스트들과 결탁했으며 혼란을 막기 위한 어떤 조치도 취하지 않았다고 비난했습니다. 롱은 워싱턴의 질서를 회복하고 부패한 정부를 파괴하겠다고 맹세했습니다."
 amcivwar.14.a:0 "공화국을 지켜내자"
 amcivwar.14.b:0 "조국을 지켜내자 (미주 연합으로 플레이합니다)"
 
@@ -162,7 +162,7 @@ amcivwar.16.a:0 "이건 아니야…"
 ### Set Up Events - Landon ###
 
 amcivwar.17.t:0 "롱이 미주 연합을 선포하다"
-amcivwar.17.d:0 "휴이 롱은 랜던 대통령은 폭군이며 이에 반대해 봉기해야 한다고 선언했습니다. 라디오 연설에서 롱은 랜던이 사회당의 생디칼주의자들과 결탁했으며 혼란을 막기 위한 어떤 조치도 취하지 않았다고 비난했습니다. 롱은 워싱턴의 질서를 회복하고 부패한 정부를 파괴하겠다고 맹세했습니다."
+amcivwar.17.d:0 "휴이 롱은 랜던 대통령은 폭군이며 이에 반대해 봉기해야 한다고 선언했습니다. 라디오 연설에서 롱은 랜던이 사회당의 생디칼리스트들과 결탁했으며 혼란을 막기 위한 어떤 조치도 취하지 않았다고 비난했습니다. 롱은 워싱턴의 질서를 회복하고 부패한 정부를 파괴하겠다고 맹세했습니다."
 amcivwar.17.a:0 "공화국을 지켜내자"
 amcivwar.17.b:0 "조국을 지켜내자 (미주 연합으로 플레이합니다)"
 
