--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -278,7 +278,7 @@ TEX_use_the_fbi_desc:0 "J. Edgar Hoover understands the needs of the new America
 TEX_alien_and_sedition_act:0 "새로운 이주법과 치안유지법"
 TEX_alien_and_sedition_act_desc:0 "One of the most important acts of the early American Republic was the Aliens and Sedition Act passed by President John Adams, a wise statesman. We must revive the Act to protect true Americans from syndicalist infiltrators. Firstly, being a danger to public safety or national integrity is now grounds for imprisonment and deportation."
 TEX_cointelpro:0 "코인텔프로"
-TEX_cointelpro_desc:0 "새로운 이주법과 치안유지법의 성공은 우리가 그동안 알려진 생디칼주의자 구성원들을 비롯한 비정치적이고 종교적인 몇몇 조직들을 식별하는 것을 가능하게 했습니다. 이러한 조직은 조직 구성원 간의 통신을 감시할 수 있는 완전한 능력을 갖춘 최초의 역지능 프로그램인 새로운 코인텔프로 프로그램에 따라 감시될 것입니다."
+TEX_cointelpro_desc:0 "새로운 이주법과 치안유지법의 성공은 우리가 그동안 알려진 생디칼리스트 구성원들을 비롯한 비정치적이고 종교적인 몇몇 조직들을 식별하는 것을 가능하게 했습니다. 이러한 조직은 조직 구성원 간의 통신을 감시할 수 있는 완전한 능력을 갖춘 최초의 역지능 프로그램인 새로운 코인텔프로 프로그램에 따라 감시될 것입니다."
 TEX_purge_dissidents:0 "반체제 인사 숙청"
 TEX_purge_dissidents_desc:0 "Through the Aliens and Sedition Act we have gathered a list of known enemies of the War Powers Committee. They are welfare Longists, anti-progress religious fundamentalists, and mutualists. We are prepared to arrest every ground member and have prepared to export certain as-of-yet untouchable politicians who support these dissidents."
 TEX_office_of_policy_coordination:0 "정책조정실"
@@ -288,7 +288,7 @@ TEX_the_black_chamber_desc:0 "또 다른 안전확보를 위한 목표는 버니
 TEX_american_nationalism:0 "미국 국가주의"
 TEX_american_nationalism_desc:0 "The American Dream, or Creed, or even Ideal is the often-described glue that holds together our national integrity and prevents civil disturbances. The cascade of failure that was epitomized by Hoover and turned over by Huey Long is now fertile for the American Republic to replant American Nationalism."
 TEX_the_american_legion:0 "재향군인회"
-TEX_the_american_legion_desc:0 "휴이 롱의 종말은 재향군인회의 용감한 참전용사들이 아니었다면 재앙으로 끝났을 것입니다. 대중의 히스테리가 생디칼주의자에 대항하여 커졌을 때 우뚝 서 있었던 것은 모즐리 아래의 재향군인회였습니다. 휴이 롱의 미닛맨 경호원들이 그가 실종되는 우회로를 택하도록 설득한 것도 재향군인회였습니다."
+TEX_the_american_legion_desc:0 "휴이 롱의 종말은 재향군인회의 용감한 참전용사들이 아니었다면 재앙으로 끝났을 것입니다. 대중의 히스테리가 생디칼리스트에 대항하여 커졌을 때 우뚝 서 있었던 것은 모즐리 아래의 재향군인회였습니다. 휴이 롱의 미닛맨 경호원들이 그가 실종되는 우회로를 택하도록 설득한 것도 재향군인회였습니다."
 TEX_nationalize_boy_scouts:0 "보이스카우트 통제"
 TEX_nationalize_boy_scouts_desc:0 "애국적인 청소년 단체들은 수십 년 동안 유럽에서 존재해왔습니다. 미국의 보이스카우트는 아직 충분한 지원을 받지는 못하지만 절묘하게 미국인들에게 충성심을 심어주는 작업을 잘 해내고 있습니다. 비상대권위원회는 진정한 공화주의의 교육 및 육성을 촉진하기 위한 보이스카우트 시설을 허가합니다."
 TEX_fordism:0 "포드주의"
@@ -704,7 +704,7 @@ unionstate.30.b:0 ""
 ### Business Plot Events 31 - 50 ###
 
 unionstate.31.t:0 "할리우드 리스트"
-unionstate.31.d:0 "우리는 할리우드가 항상 법 위에 있었음을 잘 압니다. 할리우드는 캘리포니아에서 지적재산권법을 피하려는 시도에 불과합니다. 게다가 그곳에 있는 몇몇 예술가들이 우리의 위대한 미 공화국을 상대로 생디칼주의자들이 승리하기를 희망했다는 것은 공공연한 사실입니다. 이제 그들의 멍청함이 드러나고 그들의 선동행위는 기소당할 것입니다."
+unionstate.31.d:0 "우리는 할리우드가 항상 법 위에 있었음을 잘 압니다. 할리우드는 캘리포니아에서 지적재산권법을 피하려는 시도에 불과합니다. 게다가 그곳에 있는 몇몇 예술가들이 우리의 위대한 미 공화국을 상대로 생디칼리스트들이 승리하기를 희망했다는 것은 공공연한 사실입니다. 이제 그들의 멍청함이 드러나고 그들의 선동행위는 기소당할 것입니다."
 unionstate.31.a:0 "우리는 재판 장면을 촬영할 것이다"
 
 unionstate.32.t:0 "반유대주의의 잔존"
